--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "spinen/laravel-quickbooks-client",
-  "description": "SPINEN's Laravel Client for QuickBooks.",
+  "description": "SPINEN's Laravel Client for QuickBooks (laravel 10).",
   "keywords": [
     "quickbooks",
     "client",
@@ -15,11 +15,11 @@
     }
   ],
   "require": {
-    "php": "^8.0.2",
-    "illuminate/database": "^9.19",
-    "illuminate/http": "^9.19",
-    "illuminate/routing": "^9.19",
-    "illuminate/support": "^9.19",
+    "php": "^8.2",
+    "illuminate/database": "^10.0",
+    "illuminate/http": "^10.0",
+    "illuminate/routing": "^10.0",
+    "illuminate/support": "^10.0",
     "nesbot/carbon": "^2.62.1",
     "quickbooks/v3-php-sdk": "^5.4.6"
   },
@@ -27,7 +27,7 @@
     "laravel/pint": "^1.2",
     "mockery/mockery": "^1.5.1",
     "phpunit/phpunit": "^9.5.8",
-    "psy/psysh": "^0.11",
+    "psy/psysh": "^v0.12.0",
     "scrutinizer/ocular": "^1.9"
   },
   "autoload": {
